# cs202-final-project

./: .gitignore  CMakeLists.txt  README.md
src/: Bird.cpp  Bird.h  Car.cpp  Car.h  Coin.cpp  Coin.h  Constants.h  Dinosaur.h  Elephant.cpp  Elephant.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Lane.cpp  Lane.h  Level.cpp  Level.h  Logging.cpp  Logging.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Random.h  TrafficLight.cpp  TrafficLight.h  Truck.cpp  Truck.h  Utility.cpp  Utility.h  checkpoint.txt  main.cpp
src/olc/: olcINIT.cpp  olcINIT.h  olcInit.cpp  olcPGEX_CustomFont.cpp  olcPGEX_CustomFont.h  olcPGEX_Font.h  olcPGEX_Sound.cpp  olcPGEX_Sound.h  olcPGEX_TTF.cpp  olcPGEX_TTF.h  olcPixelGameEngine.h
